--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <html>
 
 <head>
-    <script type="text/javascript" src="E:\nodejslearning\jquery-3.3.1.min.js"></script>
+    //<script type="text/javascript" src="E:\nodejslearning\jquery-3.3.1.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script>
         var currentPlayer = "firstPlayer";
         var gameOver = false;
